# computer-aided-analysis-and-design

./: .gitmodules  CMakeLists.txt  README.md
include/caas/: function.hpp  linear.hpp  lu.hpp  lup.hpp  matrix.hpp  supstitution.hpp
include/caas/numerical/: runge_kutta.hpp  trapeze.hpp
include/caas/optimization/: axis.hpp  box.hpp  golden.hpp  gradient_descent.hpp  hooke_jeeves.hpp  mixed_transformation.hpp  newton_raphson.hpp  simplex.hpp  types.hpp
include/caas/utils/: log.hpp
src/homework_01/task_01/: main.cpp
src/homework_01/task_02/: main.cpp
src/homework_01/task_03/: main.cpp
src/homework_01/task_04/: main.cpp
src/homework_01/task_05/: main.cpp
src/homework_01/task_06/: main.cpp
src/homework_02/task_01/: axis.cpp  golden.cpp  hooke_jeeves.cpp  simplex.cpp
src/homework_02/task_02/: main.cpp
src/homework_02/task_03/: main.cpp
src/homework_02/task_04/: main.cpp
src/homework_02/task_05/: main.cpp
src/homework_03/: f1.hpp  f2.hpp  f3.hpp  f4.hpp
src/homework_03/task_01/: main.cpp
src/homework_03/task_02/: f1gradient_descent.cpp  f1newton_raphson.cpp  f2gradient_descent.cpp  f2newton_raphson.cpp
src/homework_03/task_03/: constrains.hpp  f1.cpp  f2.cpp
src/homework_03/task_04/: constrains.hpp  f1.cpp  f2.cpp
src/homework_03/task_05/: main.cpp
src/homework_04/task_01/: f1_binary.cpp  f1_decimal.cpp  f3_binary.cpp  f3_decimal.cpp  f6_binary.cpp  f6_decimal.cpp  f7_binary.cpp
src/homework_04/task_02/: f7_decimal.cpp
src/homework_04/task_03/: f6.cpp  f7.cpp
src/homework_04/task_04/: main.cpp
src/homework_05/task_01/: main.cpp
src/homework_05/task_02/: main.cpp
src/homework_05/task_03/: runge_kutta.cpp  trapeze.cpp
src/homework_05/task_04/: runge_kutta.cpp  trapeze.cpp
test/: matrix_test.cpp
